# optimfrogcpp

./: .gitignore  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  optimfrogcpp  test.ofr  test.raw  test0.ofr  test2.ofr
.github/workflows/: build.yml  conformance.yml
doc/: README.md  changelog.md  dualstream.md  ent3_analysis.md  features.md  format.md  ieee_float.md  license.md  optimfrog_re_knowledge.md  post2_remap_analysis.md  pred3_analysis.md  sdk_reference.md  status.md
include/: ofrdecomp.hpp  optimfrog_decoder.h  optimfrog_encoder.h  optimfrog_tables.h
src/: dummy.cpp  main.cpp  optimfrog.cpp  optimfrog_decoder.cpp  optimfrog_decoder_entropy.cpp  optimfrog_decoder_entropy_fast_stereo.cpp  optimfrog_decoder_post2.cpp  optimfrog_decoder_pred3.cpp  optimfrog_decoder_predictor.cpp  optimfrog_decoder_predictor.cpp.orig  optimfrog_decoder_predictor.cpp.rej  optimfrog_encoder.cpp
src/cli/: main.cpp  ofr_main.cpp  ofrenc_main.cpp
src/core/: ofrdecomp.cpp  optimfrog.cpp  optimfrog_decoder.cpp  optimfrog_decoder_ent3.cpp  optimfrog_decoder_entropy.cpp  optimfrog_decoder_post2.cpp  optimfrog_decoder_pred3.cpp  optimfrog_decoder_predictor.cpp  optimfrog_encoder.cpp  optimfrog_encoder_float.cpp
tests/: enc_rt_test.cpp
tests/conformance/: run.sh  run_float.sh
